--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Lesson</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>Hello git</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate autem aut animi nobis minima deserunt architecto obcaecati. Aliquid omnis odit harum delectus et repudiandae est, nisi ratione velit, soluta quidem.</p>
 </body>
 </html>
